--- a/app/src/main/res/layout/include_timer_layout.xml
+++ b/app/src/main/res/layout/include_timer_layout.xml
@@ -5,16 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:adjustViewBounds="true"
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23"
-        app:srcCompat="@drawable/running_bk" />
 
     <TextView
         android:id="@+id/textView23"
@@ -27,27 +17,31 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView11"
+        android:id="@+id/playTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:translationX="-4dp"
+        android:padding="4dp"
         android:background="@drawable/shape_control_btns"
-        app:layout_constraintBottom_toTopOf="@+id/imageView12"
+        app:layout_constraintBottom_toTopOf="@+id/pauseTimer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView10"
         app:srcCompat="@drawable/ic_play" />
 
     <ImageView
-        android:id="@+id/imageView12"
+        android:id="@+id/pauseTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:background="@drawable/shape_control_btns"
         android:backgroundTint="@color/lightYellow"
+        android:padding="4dp"
+        android:translationX="-4dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView13"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11"
+        app:layout_constraintTop_toBottomOf="@+id/playTimer"
         app:srcCompat="@drawable/ic_pause" />
 
     <ImageView
@@ -57,11 +51,23 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_control_btns"
+        android:translationX="-4dp"
+        android:padding="4dp"
         android:backgroundTint="@color/lightRed"
         app:layout_constraintBottom_toBottomOf="@+id/imageView10"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/pauseTimer"
         app:srcCompat="@drawable/ic_stop" />
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:adjustViewBounds="true"
+        app:layout_constraintEnd_toStartOf="@+id/playTimer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView23"
+        app:srcCompat="@drawable/running_bk" />
 
     <TextView
         android:id="@+id/textView24"
