--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Search"
+    <item
+        android:title="Search"
         android:id="@+id/searchFragment"
-        android:icon="@drawable/ic_search_white"/>
-    <item android:title="Shop"
-        android:icon="@drawable/ic_shopping_cart"/>
-    <item android:title="Home"
+        android:icon="@drawable/ic_search_white" />
+    <item
+        android:title="Shop"
+        android:icon="@drawable/ic_shopping_cart" />
+    <item
+        android:title="Home"
         android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_home"/>
-    <item android:title="Workout" />
+        android:icon="@drawable/ic_home" />
+    <item
+        android:id="@+id/workoutFragment"
+        android:title="Workout" />
+
     <item android:title="Profile" />
 </menu>
