--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/ic_search_white" />
     <item
         android:title="Shop"
+        android:id="@+id/shoppingFragment"
         android:icon="@drawable/ic_shopping_cart" />
     <item
         android:title="Home"
