--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -17,5 +17,7 @@
         android:id="@+id/workoutFragment"
         android:title="Workout" />
 
-    <item android:title="Profile" />
+    <item
+        android:id="@+id/profileFragment"
+        android:title="Profile" />
 </menu>
